src/test/ui/regions/regions-close-param-into-object.nll.stderr
error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/regions-close-param-into-object.rs:10:5
   |
LL |     Box::new(v)
   |     ^^^^^^^^^^^ ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
LL |     where T : X + 'static
   |                 +++++++++

error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/regions-close-param-into-object.rs:16:5
   |
LL |     Box::new(v)
   |     ^^^^^^^^^^^ ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
LL | fn p2<T: 'static>(v: Box<T>) -> Box<dyn X + 'static>
   |        +++++++++

error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/regions-close-param-into-object.rs:22:5
   |
LL |     Box::new(v)
   |     ^^^^^^^^^^^ ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
LL |     where T : X + 'a
   |                 ++++

error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/regions-close-param-into-object.rs:28:5
   |
LL |     Box::new(v)
   |     ^^^^^^^^^^^ ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
LL | fn p4<'a,T: 'a>(v: Box<T>) -> Box<dyn X + 'a>
   |           ++++

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0309, E0310.
For more information about an error, try `rustc --explain E0309`.
